--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/CareHub.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.TimingFramework-0.55.jar=C:\\Users\\ASUS\\Downloads\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.TimingFramework-0.55.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
